fixing background blur on Safari

--- a/styles.css
+++ b/styles.css
@@ -71,6 +71,7 @@ body {
 	min-width: 87px;
 	/*Fuck Firefox because it doesn't support backdrop-filter parameter in CSS. Mozilla, pls fix.*/
 	backdrop-filter: blur(20px);
+	-webkit-backdrop-filter: blur(20px);
 }
 
 .div-margin {
